fix button sizing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ i{color: #FFF;}
 		font-size: 12px;
     }
     h3{margin: 2em 0;}
-	a{font-size: 1.3em;}
+	a{font-size: 1em;}
 
     .tenfold-container{width: 95%;}
     .container{padding-bottom: 4em;}
